further styled page, added JS function to loop through library

--- a/style.css
+++ b/style.css
@@ -1,17 +1,24 @@
+:root {
+  --cursive-font-family: "Borel", cursive;
+}
+
 .nav-bar {
-  background-color: rgb(231, 231, 231);
+  background-color: white;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   width: 100%;
   margin: 0px;
-  height: 50px;
+  height: 70px;
+  box-shadow: 0px 2px 2px -2px rgba(0, 0, 0, 0.2) ray;
 }
 
 h1 {
+  font-family: var(--cursive-font-family);
   margin: 0px;
   padding-left: 10px;
+  font-size: 2rem;
 }
 
 .add {
@@ -19,13 +26,20 @@ h1 {
   background-color: rgb(255, 85, 85);
   border: none;
   border-radius: 10px;
-  padding: 10px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 15px;
+  padding-left: 25px;
+  padding-right: 25px;
+  font-weight: bold;
+  font-size: 1rem;
+  color: white;
+}
+
+.add:hover {
+  background-color: rgb(86, 86, 244);
 }
 
 .body {
-  background-color: white;
+  background-color: rgb(247, 247, 247);
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(12, 1fr);
@@ -36,9 +50,12 @@ h1 {
 }
 
 .footer {
+  font-family: var(--cursive-font-family);
   width: 100%;
-  background-color: lightgray;
+  background-color: white;
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
+  padding: 5px;
 }
