--- a/style.css
+++ b/style.css
@@ -61,17 +61,37 @@ h1 {
 }
 
 .form-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 30px;
-  background-color: antiquewhite;
+  background-color: rgb(255, 247, 237);
   border-radius: 1rem;
+  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
 }
 
 input {
   margin: 10px;
+}
+
+.form > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+}
+
+input {
+  width: 100%;
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
 }
 
 .check-box-div {
@@ -79,4 +99,21 @@ input {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  width: 100%;
+}
+
+.check-box-div > p {
+  width: 350px;
+}
+
+.submit-button {
+  margin-right: 10px;
+  background-color: rgb(255, 85, 85);
+  border: none;
+  border-radius: 10px;
+  padding: 10px;
+  width: 100%;
+  font-weight: bold;
+  font-size: 1rem;
+  color: white;
 }
