--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ h1 {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(12, 1fr);
-  gap: 10px;
+  gap: 20px;
   height: 100vh;
   width: 100%;
   margin: 0px;
@@ -116,4 +116,20 @@ input {
   font-weight: bold;
   font-size: 1rem;
   color: white;
+}
+
+.book-container {
+  grid-area: span 4 / span 3;
+  border-radius: 10px;
+  background-color: antiquewhite;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+}
+
+.read-button,
+.remove-button {
+  width: 100%;
 }
