--- a/style.css
+++ b/style.css
@@ -129,7 +129,19 @@ input {
   box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
 }
 
+.title-section,
+.author-section,
+.page-number-section {
+  margin: 10px;
+  font-size: 25px;
+}
+
 .read-button,
 .remove-button {
-  width: 100%;
+  width: 200px;
+  margin: 10px;
+  font-size: 25px;
+  border: none;
+  border-radius: 10px;
+  padding: 5px;
 }
