--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
   --cursive-font-family: "Borel", cursive;
+  --form-background-color: rgb(255, 247, 237);
 }
 
 .nav-bar {
@@ -61,6 +62,7 @@ h1 {
 }
 
 .form-container {
+  font-family: var(--cursive-font-family);
   position: absolute;
   top: 50%;
   left: 50%;
@@ -70,7 +72,7 @@ h1 {
   justify-content: center;
   align-items: center;
   padding: 30px;
-  background-color: rgb(255, 247, 237);
+  background-color: var(--form-background-color);
   border-radius: 1rem;
   box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
 }
@@ -84,7 +86,7 @@ input {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 200px;
+  width: 270px;
 }
 
 input {
@@ -111,7 +113,7 @@ input {
   background-color: rgb(255, 85, 85);
   border: none;
   border-radius: 10px;
-  padding: 10px;
+  padding: 15px;
   width: 100%;
   font-weight: bold;
   font-size: 1rem;
@@ -119,9 +121,10 @@ input {
 }
 
 .book-container {
+  font-family: var(--cursive-font-family);
   grid-area: span 4 / span 3;
   border-radius: 10px;
-  background-color: antiquewhite;
+  background-color: var(--form-background-color);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -132,16 +135,28 @@ input {
 .title-section,
 .author-section,
 .page-number-section {
-  margin: 10px;
+  margin: 5px;
   font-size: 25px;
 }
 
 .read-button,
 .remove-button {
-  width: 200px;
-  margin: 10px;
+  width: 250px;
+  margin: 5px;
   font-size: 25px;
   border: none;
   border-radius: 10px;
-  padding: 5px;
+  padding: 15px;
+}
+
+.read-button {
+  background-color: greenyellow;
+}
+
+.read-button:hover {
+  background-color: yellowgreen;
+}
+
+.remove-button:hover {
+  background-color: lightgrey;
 }
