--- a/style.css
+++ b/style.css
@@ -122,7 +122,8 @@ input {
 
 .book-container {
   font-family: var(--cursive-font-family);
-  grid-area: span 4 / span 3;
+  font-size: 1rem;
+  grid-area: span 6 / span 3;
   border-radius: 10px;
   background-color: var(--form-background-color);
   display: flex;
@@ -143,7 +144,8 @@ input {
 .remove-button {
   width: 250px;
   margin: 5px;
-  font-size: 25px;
+  font-size: 1rem;
+  font-family: var(--cursive-font-family);
   border: none;
   border-radius: 10px;
   padding: 15px;
